@@ -514,9 +514,9 @@ static errr Term_xtra_gcu_alive(int v)
 
 
 #ifdef USE_NCURSES
-const char help_gcu[] = "NCurses, for terminal console";
+const char help_gcu[] = "NCurses, for terminal console, subopts -b(ig screen)";
 #else /* USE_NCURSES */
-const char help_gcu[] = "Curses, for terminal console";
+const char help_gcu[] = "Curses, for terminal console, subopts -b(ig screen)";
 #endif /* USE_NCURSES */
 
 
@@ -966,11 +966,22 @@ errr init_gcu(int argc, char **argv)
 
 	int num_term = MAX_TERM_DATA, next_win = 0;
 
+	bool use_big_screen = FALSE;
+
 	
-	/* Unused */
-	(void)argc;
-	(void)argv;
-	
+	/* Parse args */
+	for (i = 1; i < argc; i++)
+	{
+		if (prefix(argv[i], "-b"))
+		{
+			use_big_screen = TRUE;
+			continue;
+		}
+
+		plog_fmt("Ignoring option: %s", argv[i]);
+	}
+
+
 	/* Extract the normal keymap */
 	keymap_norm_prepare();
 
@@ -1096,62 +1107,86 @@ errr init_gcu(int argc, char **argv)
 
 	/*** Now prepare the term(s) ***/
 
-	/* Create several terms */
-	for (i = 0; i < num_term; i++)
+	/* Big screen -- one big term */
+	if (use_big_screen)
 	{
-		int rows, cols, y, x;
-
-		/* Decide on size and position */
-		switch (i)
-		{
-			/* Upper left */
-			case 0:
-				rows = 24;
-				cols = 80;
-				y = x = 0;
-				break;
-
-			/* Lower left */
-			case 1:
-				rows = LINES - 25;
-				cols = 80;
-				y = 25;
-				x = 0;
-				break;
-
-			/* Upper right */
-			case 2:
-				rows = 24;
-				cols = COLS - 81;
-				y = 0;
-				x = 81;
-				break;
-
-			/* Lower right */
-			case 3:
-				rows = LINES - 25;
-				cols = COLS - 81;
-				y = 25;
-				x = 81;
-				break;
-
-			/* XXX */
-			default:
-				rows = cols = y = x = 0;
-				break;
-		}
-
-		/* Skip non-existant windows */
-		if (rows <= 0 || cols <= 0) continue;
-
 		/* Create a term */
-		term_data_init_gcu(&data[next_win], rows, cols, y, x);
+		term_data_init_gcu(&data[0], LINES, COLS, 0, 0);
 
 		/* Remember the term */
-		angband_term[next_win] = &data[next_win].t;
+		angband_term[0] = &data[0].t;
+	}
 
-		/* One more window */
-		next_win++;
+	/* No big screen -- create as many term windows as possible */
+	else
+	{
+		/* Create several terms */
+		for (i = 0; i < num_term; i++)
+		{
+			int rows, cols, y, x;
+
+			/* Decide on size and position */
+			switch (i)
+			{
+				/* Upper left */
+				case 0:
+				{
+					rows = 24;
+					cols = 80;
+					y = x = 0;
+					break;
+				}
+
+				/* Lower left */
+				case 1:
+				{
+					rows = LINES - 25;
+					cols = 80;
+					y = 25;
+					x = 0;
+					break;
+				}
+
+				/* Upper right */
+				case 2:
+				{
+					rows = 24;
+					cols = COLS - 81;
+					y = 0;
+					x = 81;
+					break;
+				}
+
+				/* Lower right */
+				case 3:
+				{
+					rows = LINES - 25;
+					cols = COLS - 81;
+					y = 25;
+					x = 81;
+					break;
+				}
+
+				/* XXX */
+				default:
+				{
+					rows = cols = y = x = 0;
+					break;
+				}
+			}
+
+			/* Skip non-existant windows */
+			if (rows <= 0 || cols <= 0) continue;
+
+			/* Create a term */
+			term_data_init_gcu(&data[next_win], rows, cols, y, x);
+
+			/* Remember the term */
+			angband_term[next_win] = &data[next_win].t;
+
+			/* One more window */
+			next_win++;
+		}
 	}
 
 	/* Activate the "Angband" window screen */
